sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:4: error: illegal start of simple pattern
  while (compteur!=0) {
  ^AlgCocktailSort1:7: error: '=' expected but '}' found.
} 
^