sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var 
  while (compteur!=0) {
    
  }
}